--- a/stories/Components/Forms/_form-legacy.scss
+++ b/stories/Components/Forms/_form-legacy.scss
@@ -51,7 +51,7 @@ textarea {
   border-radius: 0;
   box-sizing: border-box;
   display: block;
-  font-family: var(--mg-font-family);
+  font-family: $mg-font-family;
   font-size: $mg-font-size-300;
   height: 46px;
   padding: mg-rem(6.25);
